--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "@styles/*": ["./styles/*"],
       "@utils/*": ["./utils/*"],
       "@context/*": ["./context/*"],
-      "@models/*": ["./models/*"]
+      "@models/*": ["./models/*"],
+      "@helpers/*": ["./helpers/*"]
     }
   }
 }
