--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "mongoose": "^6.8.1",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.2",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
