--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "express-validator": "^6.15.0",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.5.0",
     "formik": "^2.2.9",
+    "googleapis": "^114.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
+    "nodemailer": "^6.9.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
+    "sanitize-html": "^2.10.0",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
