--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
+    "@ctrl/react-adsense": "^1.6.1",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "axios": "^1.3.4",
