--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-adsense": "^0.1.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
