--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.8.1",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
+    "nextjs-google-analytics": "^2.3.3",
     "nodemailer": "^6.9.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
