--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/firebase-adapter": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "express-validator": "^6.15.0",
@@ -38,7 +39,9 @@
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "sanitize-html": "^2.10.0",
-    "sweetalert2": "^11.7.3"
+    "sha1": "^1.1.1",
+    "sweetalert2": "^11.7.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
