--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "sitemaps": "next-sitemap --config ./next-sitemap.config.js"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
