--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@ctrl/react-adsense": "^1.6.1",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
-    "axios": "^1.3.4",
+    "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
+    "buffer": "^6.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "express-validator": "^6.15.0",
