--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
   "extends": "next/core-web-vitals",
 
-  "react/no-unescaped-entities": 0
+  "rules": {
+    "react/no-unescaped-entities": 0
+  }
 }
