--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ctrl/react-adsense": "^1.6.1",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "aws-sdk": "^2.1368.0",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "buffer": "^6.0.3",
