--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "firebase-admin": "^11.5.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.3",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "googleapis": "^114.0.0",
     "iyzipay": "^2.0.48",
+    "mailgun.js": "^8.2.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "next": "13.2.4",
