--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID = 
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET= 
 NEXTAUTH_URL = 
-AUTH_SECRET = 
+NEXT_PUBLIC_AUTH_SECRET = 
 
 MONGODB_URI = 
 MONGODB_DB = 
